<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/RegisName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/bg_list_name"
        android:textStyle="bold"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_logreg"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/RegisName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/fname_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_list_name"
            android:backgroundTint="#808080"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:hint="@string/fname"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>
        <EditText
            android:id="@+id/uname_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/fname_in"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_list_name"
            android:backgroundTint="#808080"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:hint="@string/uname"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/email_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/uname_in"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_list_name"
            android:backgroundTint="#808080"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/pass_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/email_in"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_list_name"
            android:backgroundTint="#808080"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:hint="@string/pass"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

        <Button
            android:id="@+id/Reg_Btn_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_round"
            app:backgroundTint="@color/button_color_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pass_in"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:text="@string/register"
            android:layout_margin="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>